update maven. created pkg